(add new changes on top of this file)

09-12-03 Ulf Treger  <ulf.treger@3plusx.de>

	* Initial release